--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Xcode
+.DS_Store
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+
+*.xccheckout
+!Example/ANDLineChartView.xcworkspace
+
+
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
